fix subtitle clipping

--- a/res/css/views/rooms/_RoomTile.pcss
+++ b/res/css/views/rooms/_RoomTile.pcss
@@ -60,7 +60,7 @@ limitations under the License.
             color: $secondary-content;
             display: flex;
             gap: $spacing-4;
-            line-height: 1;
+            line-height: 1.2;
         }
 
         .mx_RoomTile_title,
